# lr_cpec_prog

./: README.md  shape.h  ЛР22
Lr4/: mainwindow.cpp  mainwindow.h  spiralprogressindicator.cpp  spiralprogressindicator.h
lr10/client/: client.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lr10/server/: main.cpp  server.cpp  server.h  server.pro
lr5/: customgraphicsscene.cpp  customgraphicsscene.h  graphiccontroller.cpp  graphiccontroller.h  graphicmodel.cpp  graphicmodel.h  mainwindow.cpp  mainwindow.h  shape.cpp
lr6/: main.cpp  main.qml  weatherfetcher.js
lr7/: CmakeLists.txt  database.cpp  database.h  main.cpp  main.qml
lr8/: mainwidow.cpp  mainwindow.h  mainwindow.ui
lr9/: CMakeLists.txt  deviceemulator.cpp  deviceemulator.h  deviceselectiondialog.cpp  deviceselectiondialog.h  magma.cpp  magma.h  main.cpp  mainwindow.cpp  mainwindow.h
